# cufft-benchmarks

./: CMakeLists.txt  README.md  fft_performance_report.csv  plot.py  run.sh
src/: cufft_bench.cu
